src/test/rustdoc-ui/intra-doc/prim-conflict.stderr
error: `char` is both a module and a builtin type
  --> $DIR/prim-conflict.rs:4:6
   |
LL | /// [char]
   |      ^^^^ ambiguous link
   |
note: the lint level is defined here
  --> $DIR/prim-conflict.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to link to the module, prefix with `mod@`
   |
LL | /// [mod@char]
   |      ^^^^^^^^
help: to link to the builtin type, prefix with `prim@`
   |
LL | /// [prim@char]
   |      ^^^^^^^^^

error: `char` is both a module and a builtin type
  --> $DIR/prim-conflict.rs:10:6
   |
LL | /// [type@char]
   |      ^^^^^^^^^ ambiguous link
   |
help: to link to the module, prefix with `mod@`
   |
LL | /// [mod@char]
   |      ^^^^^^^^
help: to link to the builtin type, prefix with `prim@`
   |
LL | /// [prim@char]
   |      ^^^^^^^^^

warning: documentation for `char` links to item `char` which will not have documentation generated
  --> $DIR/prim-conflict.rs:16:6
   |
LL | /// [mod@char] // ok
   |      ^^^^^^^^ this item is will not be documented
   |
   = note: `#[warn(rustdoc::private_intra_doc_links)]` on by default
   = note: `char` may be in a private module with all re-exports marked as `#[doc(no_inline)]`

error: incompatible link kind for `char`
  --> $DIR/prim-conflict.rs:19:6
   |
LL | /// [struct@char]
   |      ^^^^^^^^^^^ help: to link to the module, prefix with `mod@`: `mod@char`
   |
   = note: this link resolved to a module, which is not a struct

error: incompatible link kind for `char`
  --> $DIR/prim-conflict.rs:26:10
   |
LL |     //! [struct@char]
   |          ^^^^^^^^^^^ help: to link to the builtin type, prefix with `prim@`: `prim@char`
   |
   = note: this link resolved to a builtin type, which is not a struct

error: aborting due to 4 previous errors; 1 warning emitted

